Bug 1894929 - Disable gl::SwapChain's internal pooling when RemoteTextureMap is used. r=jnicol,gfx-reviewers

Differential Revision: https://phabricator.services.mozilla.com/D210864