gfx/gl/GLScreenBuffer.h
@@ -55,6 +55,7 @@ class SwapChain final {
   UniquePtr<SurfaceFactory> mFactory;
 
  private:
+  size_t mPoolLimit;
   std::queue<std::shared_ptr<SharedSurface>> mPool;
   std::shared_ptr<SharedSurface> mFrontBuffer;
   std::function<void()> mDestroyedCallback;
@@ -68,6 +69,14 @@ class SwapChain final {
  public:
   SwapChain();
   virtual ~SwapChain();
+
+  void DisablePool() {
+    if (mPoolLimit) {
+      MOZ_ASSERT(mPool.empty());
+      mPool = {};
+      mPoolLimit = 0;
+    }
+  }
 
   void ClearPool();
   bool StoreRecycledSurface(const std::shared_ptr<SharedSurface>& surf);
